tests/import/resolution_scope/negative_nested_scope_validation/transitive_main.ott
import dep_transitive_bad :: 'dep_transitive_bad.ott' ::=
  | expr
